# twr-sdk

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  CNAME  Doxyfile  LICENSE  Makefile.mk  README.md  annotated.html  annotated_dup.js  bcl_8h_source.html  build-doc.sh  classes.html  deploy-doc.sh  dir_1d7b98041e0ea635e761b4c525e79ea9.html  dir_1d7b98041e0ea635e761b4c525e79ea9.js  dir_6d68ddd307e59cc49259130e88cc46b6.html  dir_6d68ddd307e59cc49259130e88cc46b6.js  dir_854c927ce6eb8d3f7745fe8199a8d7ad.html  dir_854c927ce6eb8d3f7745fe8199a8d7ad.js  dir_9dd87411b26a65f317c162c91fc8d49c.html  dir_9dd87411b26a65f317c162c91fc8d49c.js  dir_d73e12314111b7bfd81a2766bdc3e4ad.html  dir_d73e12314111b7bfd81a2766bdc3e4ad.js  files.html  files.js  files_dup.js  functions.html  functions_vars.html  git-version.py  graph_legend.html  group__twr__adc.html  group__twr__adc.js  group__twr__adc_ga116e430db0221c8a12f1762425b75f14_icgraph.map  group__twr__adc_ga116e430db0221c8a12f1762425b75f14_icgraph.md5  group__twr__adc_ga183b3597c7489d883832df760413d28c_icgraph.map  group__twr__adc_ga183b3597c7489d883832df760413d28c_icgraph.md5  group__twr__adc_ga279784613539a7a60ff4804d3dc7f134_icgraph.map  group__twr__adc_ga279784613539a7a60ff4804d3dc7f134_icgraph.md5  (+2035 more)
_examples/: README.md
bcl/: CMakeLists.txt  README.md
boards/: core_module.json
fonts/: Config_preset_monochrome_ISO8859-2.xml  FontBig_28px.xml  Font_14px.xml  README.md  bc_font_ubuntu11.xml  bc_font_ubuntu12.xml  bc_font_ubuntu13.xml  bc_font_ubuntu14.xml  bc_font_ubuntu15.xml  bc_font_ubuntu24.xml  bc_font_ubuntu28.xml  bc_font_ubuntu33.xml  bc_font_ubuntu8.xml  template_bc_font.tmpl
inc/: base64.h  bc.h  bc_accelerometer.h  bc_adc.h  bc_barometer_tag.h  bc_button.h  bc_common.h  bc_dac.h  bc_dfu.h  bc_eeprom.h  bc_exti.h  bc_fifo.h  bc_gpio.h  bc_hdc2080.h  bc_hts221.h  bc_humidity_tag.h  bc_irq.h  bc_led.h  bc_lis2dh12.h  bc_low_power.h  bc_lux_meter_tag.h  bc_module_pir.h  bc_module_power.h  bc_module_relay.h  bc_module_sigfox.h  bc_mpl3115a2.h  bc_opt3001.h  bc_pir_module.h  bc_pyq1648.h  bc_rtc.h  bc_scheduler.h  bc_spi.h  bc_spirit1.h  bc_tag_barometer.h  bc_tag_humidity.h  bc_tag_lux_meter.h  bc_tag_temperature.h  bc_tca9534a.h  bc_temperature_tag.h  bc_tick.h  (+4 more)
iqrf/: DPA.h  IQRF_HWPID.h  IQRFstandard.h
lib/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  functions_0.js  (+26 more)
(+1080 files in other folders)
